--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.4.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
